# adventofcode2021

./: .gitignore  Cargo.toml  LICENSE  README.md
python/: day8.py  pyproject.toml  task3.py
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  shared.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/www/: package.json
www/: index.html  index.js  package-lock.json
