[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = {version = "0.3.51", features = ["console"]}
