[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "advent"
path = "src/main.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
crossterm = "0.22.1"
wasm-bindgen = "0.2.74"
web-sys = {version = "0.3.51", features = ["console"]}
