[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alexey Popravka", email = "root@localhost"},
]
dependencies = [
    "numpy~=1.21",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
